# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.616 2006/03/07 04:26:34 codeman Exp $

  6 Mar 2006; Preston Cody <codeman@gentoo.org>
  src/templates/x86AT:
  add windows detection code for grub.  untested.
  
  6 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  bootloader and partitioning external commands log to compile_output.log
  wait for device node to exist before resizing
  add -v to ntfsresize command
  src/GLIStorageDevice.py:
  return start/end with ip structure
  pad min ntfs size by 50 MB just to be safe
  src/GLIArchitectureTemplate.py:
  only install filesystem tools for partitions with a mountpoint

  5 Mar 2006; Preston Cody <codeman@gentoo.org>
  add error catching and text to saving profile dialogs

  4 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  create /tmp, /var/tmp, and /var/lib/portage with proper permissions
  src/templates/x86ArchitectureTemplate.py:
  fix checks for changed partitions so they will actually get deleted

  3 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  slightly better error handling for pre-install failures

  2 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  proper return code checking for ext2/3 resizing

  28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  accept 'none' as well as 'null' for network type
  src/GLIArchitectureTemplate.py:
  ignore extended partitions in mount_local_partitions()
  src/templates/x86ArchitectureTemplate.py:
  use get_ordered_partition_list() instead of keys().sort() for new_part_list
  check to make sure start sector for primary isn't less than end sector for
  previous extended
  src/GLIClientController.py:
  write dns servers to /etc/resolv.conf

  27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>