@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.616 2006/03/07 04:26:34 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.617 2006/03/09 04:16:17 codeman Exp $
 
+  8 Mar 2006; Preston Cody <codeman@gentoo.org>
+  src/fe/dialog/gli-dialog and src/GLIGenDialog:
+  added networkless mode to gli-dialog.
+  
   6 Mar 2006; Preston Cody <codeman@gentoo.org>
   src/templates/x86AT:
   add windows detection code for grub.  untested.
